# eidos

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRAMEWORKS.md  PRODUCT.md  README.md  api.md  database.md  deployment.md  eidos_common.md  eidos_database.md  eidos_foundations.md  eidos_overview.md  engine.md  foundations.md  ui.md
engine/: Dockerfile  pyproject.toml  railway.toml
engine/engine/: db.py  main.py  poller.py
engine/engine/handlers/: __init__.py
supabase/migrations/: 00001_initial.sql
web/: next.config.ts  package-lock.json  package.json  proxy.ts
web/actions/: workspaces.ts
web/app/: layout.tsx
web/app/(app)/: layout.tsx
web/app/(app)/admin/: layout.tsx  page.tsx
web/app/(app)/dashboard/: page.tsx
web/app/(auth)/login/: login-form.tsx  page.tsx
web/app/(auth)/signup/: page.tsx  signup-form.tsx
web/app/(marketing)/: page.tsx
web/app/auth/callback/: route.ts
web/app/onboarding/: onboarding-form.tsx  page.tsx
web/components/: app-nav.tsx
web/lib/: auth.ts  utils.ts
web/lib/supabase/: admin.ts  client.ts  middleware.ts  server.ts
